add numbers to questions

--- a/_sunday-school-lessons/2020-03-22-2Timothy1.md
+++ b/_sunday-school-lessons/2020-03-22-2Timothy1.md
@@ -24,11 +24,11 @@ Paul tells Timothy that he remembers his tears. These tears were probably from t
 
 Before Paul, Timothy's mother and grandmother also poured their faith into him. We each need to be pouring ourselves _out_ into others and being poured _into_ by others who are further along in the faith.
 
-> **Question** Who is investing _into you_ like Paul did to Timothy? Who are _you_ investing into like Paul did to Timothy?
+> **Question 1** Who is investing _into you_ like Paul did to Timothy? Who are _you_ investing into like Paul did to Timothy?
 
 Paul also recalls the spiritual gifts bestowed on Timothy. These were given to Timothy through the laying on of hands. Paul  urges Timothy to fan them into flame.
 
-> **Question** Do you know what your spiritual gifts are? How might you come to know what your gifts are? How can you "fan [them] into flame"?
+> **Question 2** Do you know what your spiritual gifts are? How might you come to know what your gifts are? How can you "fan [them] into flame"?
 
 ## Don't Be Ashamed
 
@@ -38,11 +38,11 @@ I think today within Christianity, we tend to think that Paul was a pretty cool 
 
 However, even though Paul was so despised by the world, Timothy was being encouraged to join Paul in suffering for the gospel.
 
-> **Question** Are you ever tempted to feel ashamed of God _or God's people_? What truths can you remember to help fight these temptations?
+> **Question 3** Are you ever tempted to feel ashamed of God _or God's people_? What truths can you remember to help fight these temptations?
 
 Another reason to not be ashamed is because God saved us.
 
-> **Question** According to this passage, why did God save us? What does it mean that God gave us "grace... in Christ Jesus before the ages began"?
+> **Question 4** According to this passage, why did God save us? What does it mean that God gave us "grace... in Christ Jesus before the ages began"?
 
 These deep truths are what fuel Paul to be able to continue preaching in the face of so much persecution. Specifically, Paul says "I know whom I have believed." His faith didn't rest simply on what he had been taught by other men. We shouldn't go against the good teaching we have received. He tells us to "follow the pattern of the sound words" that we have heard. But we should have a desire to know God in a deeper and deeper way. Paul had made his faith his own and had encountered God in a powerful way. Be **active** in your walk with God and pursue him. We have the promise that we will _find him_ when we seek him with all our hearts.
 
