--- a/_sunday-school-lessons/2020-04-05-2Timothy3.md
+++ b/_sunday-school-lessons/2020-04-05-2Timothy3.md
@@ -26,7 +26,7 @@ In contrast to the false teachers described above, Paul tells Timothy to remembe
 
   * Teaching - Paul knew the Scriptures and taught them faithfully.
   * Conduct - He lived his life in a godly way, in line with his teaching.
-  * aim in life - He knew his purpose and lived it. He told the Ephesian elders "I do not account my life of _any_ value nor as precious to myself, if only I may finish my course and the ministry that I received from the Lord Jesus, to testify to the gospel of the grace of God." More generally, he told the Corinthians that "we make it our aim to please him."
+  * Aim in life - He knew his purpose and lived it. He told the Ephesian elders "I do not account my life of _any_ value nor as precious to myself, if only I may finish my course and the ministry that I received from the Lord Jesus, to testify to the gospel of the grace of God." More generally, he told the Corinthians that "we make it our aim to please him."
   * Faith - He trusted God even in the face of difficulty.
   * Patience - When Paul was being held as a prisoner, there was a long time where not much happened. Instead of growing impatient and complaining about the injustice and inefficiencies of the system, he simply continued to faithfully share the gospel.
   * Love - He worked night and day, giving up his rights to bring the gospel to people and when he had to leave, he left with tears.
