--- a/_sunday-school-lessons/2020-05-03-Reason2.md
+++ b/_sunday-school-lessons/2020-05-03-Reason2.md
@@ -24,7 +24,7 @@ Terrible suffering, while a problem for a believer in the Bible, is maybe even m
 
 _My argument against God was that the universe seemed so cruel and unjust. But how had I got this idea of "just" and "unjust"?... What was I comparing this universe with when I called it unjust?... Of course I could have given up my idea of justice by saying it was nothing but a private idea of my own. But if I did that, then my argument against God collapsed too - for the argument depended on saying that the world was really unjust, not simply that it did not happen to please my private fancies.... Consequently, atheism turns out to be too simple._
 
-Lewis found that while he initially abandoned belief in God based on the unjust suffering he saw in the world. He quickly found that his sense of justice _itself_ was hard to understand if there was no God. Where does my sense of justice (which I feel when I see inexplicable suffering) come from if not from God?
+As Keller says, "many modern objections to God are based on a sense of fair-play and justice. People, we believe, ought not to suffer, be excluded, die of hunger or oppression. But the evolutionary mechanism of natural selection depends on death, destruction, and violence of the strong against the weak — these things are all perfectly natural." Lewis found that while he initially abandoned belief in God based on the unjust suffering he saw in the world. He quickly found that his sense of justice _itself_ was hard to understand if there was no God. Where does my sense of justice (which I feel when I see inexplicable suffering) come from if not from God?
 
 Thus far we have only considered the problem of evil from a very cold philosophical point of view. However, we must still be sympathetic to people who _are_ suffering. For many people this is a deeply personal issue and _not_ just philosophical. We must be careful to not dismiss the suffering of others. Along with this, it is important to realize that Christianity has a unique answer for those who are suffering. It can bring hope and encouragement instead of despair.
 
@@ -50,12 +50,11 @@ Another thing worth mentioning while on this topic of suffering is the hope that
 
 This is the ultimate victory. Not only will all evil and suffering be vanquished, but somehow having experienced it, we will have even more joy and fulfillment for eternity.
 
-> **Question 1** Do you buy the argument that the absence of a clear answer to the problem of pain and suffering doesn’t rule out the possibility that a plausible — but hidden — explanation exists? Why or why not?
+> **Question 1** Jane asks, _If your God exists and he is both all loving and all powerful, why doesn't he stop children from starving in Africa?_ How would you respond to Jane?
 
-> **Question 2** Do you feel that claiming that God has reasons for his actions that are beyond human reasoning is a cop-out? Or is this a valid argument? Explain.
+> **Question 2** Do you buy the argument that the absence of a clear answer to the problem of pain and suffering doesn’t rule out the possibility that a plausible — but hidden — explanation exists? Why or why not? Do you feel that claiming that God has reasons for his actions that are beyond human reasoning is a cop-out? Or is this a valid argument? Explain.
 
-> **Question 3** Paraphrasing C.S. Lewis, Keller states: “... modern objections to God are based on a sense of fair-play
-and justice. People, we believe, ought not to suffer, be excluded, die of hunger or oppression. But the evolutionary mechanism of natural selection depends on death, destruction, and violence of the strong against the weak — these things are all perfectly natural. _On what basis, then, does the atheist judge the natural world to be horribly wrong, unfair, and unjust?_” How would you respond to Keller’s question?
+> **Question 3** Brad lost his mom to cancer when he was four. Now he wonders why God would allow his mom to die when he was so young. What would you say to Brad?
 
 > **Question 4** In your own words, what can we learn about the problem of pain and suffering from the death of Jesus?
 
