--- a/_sunday-school-lessons/2020-05-24-Reason5.md
+++ b/_sunday-school-lessons/2020-05-24-Reason5.md
@@ -30,9 +30,9 @@ Most people agree that self-centeredness will ultimately lead to ruin. Perhaps y
 
 > Therefore God gave them up in the lusts of their hearts to impurity, to the dishonoring of their bodies among themselves, because they exchanged the truth about God for a lie and worshiped and served the creature rather than the Creator, who is blessed forever! Amen. (Romans 1:24-25)
 
-It is common for people in Western culture to have a problem with the idea of divine judgement. The idea of a God of love also exercising his wrath on unbelievers is too revolting for many people to accept. However, it should be noted that even the most loving people are sometimes filled with wrath. Further, this wrath can also be _fueled by love_. If you see someone harming themselves, your love, care and concern for them can cause you to become angry. Why would it be any different for God when he sees someone destroying himself by not seeking ultimate satisfaction and pleasure in him.
+It is common for people in Western culture to have a problem with the idea of divine judgement. The idea of a God of love also exercising his wrath on unbelievers is too revolting for many people to accept. However, it should be noted that even the most loving people are sometimes filled with wrath. Further, this wrath can also be _fueled by love_. If you see someone harming themselves, your love, care and concern for them can cause you to become angry. Why would it be any different for God when he sees someone destroying himself by not seeking ultimate satisfaction and pleasure in him?
 
-It should also be noted that while our culture has a problem with divine judgement, many cultures do not. Is the Western view of God's judgement superior to that of another culture? If the Bible is absolute truth that transcends culture, we should expect it to offend every culture on some point.
+It should also be noted that while our culture has a problem with divine judgement, many cultures do not. Is the Western view of God (and his judgement) superior to that of another culture? If the Bible is absolute truth that transcends culture, we should expect it to offend every culture on some point.
 
 Finally, to those who argue that they can only believe in a God of love, we can ask them the same questions as Keller. Where do you get the idea of a loving God? Where in nature do you see evidence for a God who's defining attribute is _love_? In what religious text do you find described a personal God who intimately loves his creation? The only evidence for this is in the Bible and the Bible describes God as also being a God of judgement.
 
