--- a/_sunday-school-lessons/2020-05-24-Reason5.md
+++ b/_sunday-school-lessons/2020-05-24-Reason5.md
@@ -55,7 +55,7 @@ Finally, to those who argue that they can only believe in a God of love, we can 
 
 ## The Questions
 
-> **Question 1** Soho explains, "The only God that is believable to me is a God of love. The Bible's God is a primitive deity who must be appeased by pain and suffering." How would you respond to Soho?
+> **Question 1** Josie explains, "The only God that is believable to me is a God of love. The Bible's God is a primitive deity who must be appeased by pain and suffering." How would you respond to Josie?
 
 > **Question 2** Chris continues along the same vein, "It all seems barbaric to me; someone had to die before the the Christian God could pardon us. Why can't God just forgive?"
 
