--- a/_sunday-school-lessons/2020-05-31-Reason6.md
+++ b/_sunday-school-lessons/2020-05-31-Reason6.md
@@ -55,7 +55,8 @@ The issue of miracles is slightly easier. It is fair to say that science is only
 - What are the theological implications of all these beliefs?
 - What details of the creation story are non-negotiable?
 - In general, how do science and the Bible relate?
-We will discuss some of your answers to these questions on Sunday.
+>
+> We will discuss some of your answers to these questions on Sunday.
 
 > **Question 3** Watch [this interview](https://www.youtube.com/watch?v=h3yOkG6z228) with Hugh Ross, founder of Reasons to Believe. Dr Ross is an example of someone who through the study of science, came to a belief in God and Jesus in particular.
 
