--- a/_sunday-school-lessons/2020-06-07-Reason7.md
+++ b/_sunday-school-lessons/2020-06-07-Reason7.md
@@ -20,7 +20,7 @@ Some scholars argue that the New Testament gospels originated as oral traditions
 
 In such a short post, we cannot possibly hope to cover the evidence for every book of the Bible. Instead, we will concentrate on examining the authenticity and reliability of the four canonical gospels (Matthew, Mark, Luke, and John) which describe the life and teachings of Jesus.
 
-To begin, it must be noted that the timing of the gospels is far too early for them to be legends. The gospels were written at the very most 40 to 60 years after the death of Christ <sup>[1](https://www.ivpress.com/the-new-testament-documents-are-they-reliable)<\sup>. This is now nearly universally recognized by scholars though it was a point of much debate during 18th and 19th centuries. The significance of this is that for a legend to take hold, all the eyewitnesses of an event, their children, and probably even their grand-children need to be long gone. Otherwise, they can stand up and refute the claims being made. The gospels routinely name eye witnesses to the events of Jesus' life. For instance, Mark notes that the man who carried the cross of Jesus, Simon of Cyrene is the father of Alexander and Rufus (Mark 15:21). These men were active in the early church and they could vouch for the story Mark was telling. Luke explains how he interviewed eyewitnesses while developing his account (Luke 1:1-5). Since many of these eyewitnesses would have still been alive at the time Luke wrote his gospel, they could have refuted what he wrote if it had been fabricated.
+To begin, it must be noted that the timing of the gospels is far too early for them to be legends. The gospels were written at the very most 40 to 60 years after the death of Christ <sup>[1](https://www.ivpress.com/the-new-testament-documents-are-they-reliable)</sup>. This is now nearly universally recognized by scholars though it was a point of much debate during 18th and 19th centuries. The significance of this is that for a legend to take hold, all the eyewitnesses of an event, their children, and probably even their grand-children need to be long gone. Otherwise, they can stand up and refute the claims being made. The gospels routinely name eye witnesses to the events of Jesus' life. For instance, Mark notes that the man who carried the cross of Jesus, Simon of Cyrene is the father of Alexander and Rufus (Mark 15:21). These men were active in the early church and they could vouch for the story Mark was telling. Luke explains how he interviewed eyewitnesses while developing his account (Luke 1:1-5). Since many of these eyewitnesses would have still been alive at the time Luke wrote his gospel, they could have refuted what he wrote if it had been fabricated.
 
 Next, the content is far too counterproductive for the gospels to be legends. If the purpose of the gospels was to promote the policies of the early church leaders and build their power, they do a pretty poor job. The disciples are repeatedly depicted as displaying jealousy, slowness to believe, and cowardice. We are told that two women were the first to report that Jesus had risen from the dead. Why would the disciples admit to this if it were not true, given that women had a much lower standing in the community? Further, the fact that Jesus was crucified would have been a terrible story to make up. Upon hearing this, listeners from both Jewish and Greek culture would have automatically suspected that Jesus was a criminal deserving to die.
 
