--- a/_sunday-school-lessons/2020-06-07-Reason7.md
+++ b/_sunday-school-lessons/2020-06-07-Reason7.md
@@ -24,7 +24,7 @@ To begin, it must be noted that the timing of the gospels is far too early for t
 
 Next, the content is far too counterproductive for the gospels to be legends. If the purpose of the gospels was to promote the policies of the early church leaders and build their power, they do a pretty poor job. The disciples are repeatedly depicted as displaying jealousy, slowness to believe, and cowardice. We are told that two women were the first to report that Jesus had risen from the dead. Why would the disciples admit to this if it were not true, given that women had a much lower standing in the community? Further, the fact that Jesus was crucified would have been a terrible story to make up. Upon hearing this, listeners from both Jewish and Greek culture would have automatically suspected that Jesus was a criminal deserving to die.
 
-We also note that the literary form of the gospels is too detailed to be legend. As C.S. Lewis explains
+Finally, we note that the literary form of the gospels is too detailed to be legend. As C.S. Lewis explains
 
 > I have been reading poems, romances, vision literature, legends, and myths all my life. I know what they are like. I know none of them are like this. Of this [gospel] text there are only two possible views. Either this is reportage ... or else, some unknown [ancient] writer ... without known predecessors or successors, suddenly anticipated the whole technique of modern novelistic, realistic narrative...
 
