--- a/_sunday-school-lessons/2020-06-21-Reason9.md
+++ b/_sunday-school-lessons/2020-06-21-Reason9.md
@@ -30,7 +30,7 @@ Leff ends his scholarly essay in an interesting way
 
 Where do we go from here? Are we content to live with so much tension between what our minds tell us about the existence of God (if we claim there is no God) and what our hearts _know_ to be right? Are we willing to admit that burning babies alive and selling people is perfectly fine in some cultures? I certainly hope not!
 
-If the premise that there is no God leads to such a difficult contradiction, what about the alternative? Is it possible that belief is God requires _less_ faith than to proceed as if there was no God? I think the answer is self-evident.
+If the premise that there is no God leads to such a difficult contradiction, what about the alternative? Is it possible that belief in God requires _less_ faith than to proceed as if there was no God? I think the answer is self-evident.
 
 If God existed before anything in this universe was created and even before time itself. It is not merely God's knowledge of morality or his authority or power that define right and wrong. Rather, God himself, his character, _is_ the standard of morality. Christianity explains how he has written that standard on our hearts by making us in his image. This explains that inescapable sense of right and wrong that we all have. This sense has been corrupted by the world falling into sin, which explains the violence and oppression we observe in the world today.
 
